--- a/pubsub/twitter-stream.yaml
+++ b/pubsub/twitter-stream.yaml
@@ -13,22 +13,11 @@ spec:
     spec:
       containers:
       - name: twitter-to-pubsub
-        image: gcr.io/google-samples/pubsub-bq-pipe:v5
-        env:
-        - name: PROCESSINGSCRIPT
-          value: twitter-to-pubsub
-        # Change this to your pubsub topic
-        - name: PUBSUB_TOPIC
-          value: projects/your-project/topics/your-topic
-        # Change the following four settings to your twitter credentials
-        # information.
-        - name: CONSUMERKEY
-          value: xxxx
-        - name: CONSUMERSECRET
-          value: xxxx
-        - name: ACCESSTOKEN
-          value: xxxx
-        - name: ACCESSTOKENSEC
-          value: xxxx
-        - name: TWSTREAMMODE
-          value: sample
+        image: lisptick/pubsub_pipeline
+        command : ["python", "controller.py"]
+        args: ["twitter-to-pubsub"]
+        envFrom:
+          - configMapRef:
+              name: tw-conf
+          - secretRef:
+              name: tw-sec
